--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -58,7 +58,7 @@ body.dark-mode {
         }
     }
 }
-z .button-darkmode {
+.button-darkmode {
     outline: none;
     border: none;
     background-color: transparent;
