--- a/assets/css/_left-part.scss
+++ b/assets/css/_left-part.scss
@@ -3,6 +3,10 @@
     background-color: #fff;
     height: 100%;
 
+    @media (max-width: 1400px) {
+        width: 300px;
+    }
+
     display: flex;
     justify-content: center;
     align-items: center;
