--- a/assets/css/_mobile-menu.scss
+++ b/assets/css/_mobile-menu.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: -1px 0px 10px 0.5px rgba(0, 0, 0, 0.2);
+    box-shadow: -1px 0px 10px 1px #e6e6e6;
     padding: 20px 40px;
 
     &__inner {
