--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -13,6 +13,7 @@
             object-fit: cover;
             -webkit-filter: grayscale(100%);
             filter: grayscale(100%);
+            box-shadow: 0px 0px 15px 2px #eeeeee;
         }
 
         @media (max-width: 768px) {
