--- a/assets/css/_contact.scss
+++ b/assets/css/_contact.scss
@@ -4,11 +4,12 @@
         margin: 60px 0;
         width: 100%;
         height: 500px;
-        box-shadow: 0px 0px 5px 0.5px #ebebeb;
+        box-shadow: 0px 0px 15px 2px #eeeeee;
         iframe {
             width: 100%;
             height: 100%;
-            object-fit: center;
+            -o-object-fit: center;
+               object-fit: center;
             border: 1px solid rgba(0, 0, 0, 0.2);
         }
 
@@ -37,6 +38,7 @@
                 padding: 5px;
                 border: 1px solid rgba(0, 0, 0, 0.2);
                 box-shadow: 0px 0px 5px 0.5px #ebebeb;
+                box-shadow: 0px 0px 15px 2px #eeeeee;
             }
 
             textarea {
@@ -44,6 +46,7 @@
                 height: 120px;
                 resize: none;
                 background-color: transparent;
+                box-shadow: 0px 0px 15px 2px #eeeeee;
             }
         }
     }
