--- a/assets/css/_description-modal.scss
+++ b/assets/css/_description-modal.scss
@@ -123,7 +123,7 @@
                 grid-gap: 50px;
                 img {
                     width: 100%;
-                    box-shadow: 0px 0px 5px 2px #c9c9c9;
+                    box-shadow: 0px 0px 15px 2px #eeeeee;
                 }
 
                 @media (max-width: 768px) {
