--- a/assets/css/_portfolio.scss
+++ b/assets/css/_portfolio.scss
@@ -91,7 +91,23 @@
                     }
 
                     @media (max-width: 992px) {
-                        height: 100%;
+                        height: 300px;
+                    }
+
+                    @media (max-width: 768px) {
+                        height: 275px;
+                    }
+
+                    @media (max-width: 576px) {
+                        height: 250px;
+                    }
+
+                    @media (max-width: 476px) {
+                        height: 225px;
+                    }
+
+                    @media (max-width: 376px) {
+                        height: 175px;
                     }
                 }
 
@@ -116,8 +132,8 @@
                         #room-homepage {
                             content: url(../../images/roomPageGIF.gif);
                         }
-                        #loopstudio-page {
-                            content: url(../../images/VRPageGIF.gif);
+                        #movies-page {
+                            content: url(../../images/movieGIF.gif);
                         }
                         #simple-paint {
                             content: url(../../images/SimplePaintGDIGIF.gif);
