add 3 templates / remove music player

--- a/assets/css/_portfolio.scss
+++ b/assets/css/_portfolio.scss
@@ -129,8 +129,14 @@
                         #documentation-page {
                             content: url(../../images/documentationPageGIF.gif);
                         }
-                        #room-homepage {
-                            content: url(../../images/roomPageGIF.gif);
+                        #poochcare {
+                            content: url(../../images/poochcareGIF.gif);
+                        }
+                        #masterwork {
+                            content: url(../../images/masterworkGIF.gif);
+                        }
+                        #imroz {
+                            content: url(../../images/imrozGIF.gif);
                         }
                         #movies-page {
                             content: url(../../images/movieGIF.gif);
