--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -13,7 +13,7 @@
             object-fit: cover;
             -webkit-filter: grayscale(100%);
             filter: grayscale(100%);
-            box-shadow: 0px 0px 15px 2px #eeeeee;
+            box-shadow: var(--about-img-box-shadow);
         }
 
         @media (max-width: 768px) {
@@ -27,6 +27,7 @@
         display: flex;
         flex-direction: column;
         &-name {
+            color: var(--heading-color);
             font-weight: 700;
             font-size: 22px;
             margin-bottom: 26px;
@@ -43,6 +44,7 @@
                     text-align: justify;
                     font-style: italic;
                     margin-bottom: 36px;
+                    color: var(--text-color);
                 }
                 @media (max-width: 1400px) {
                     max-width: 400px;
@@ -62,11 +64,13 @@
             .inner-right {
                 p {
                     line-height: 2;
+                    color: var(--text-color);
                     span {
                         font-weight: 600;
                         font-style: italic;
                         display: inline-block;
                         min-width: 100px;
+                        color: var(--text-color);
 
                         @media (max-width: 1400px) {
                             min-width: 90px;
