--- a/assets/css/_contact.scss
+++ b/assets/css/_contact.scss
@@ -4,12 +4,12 @@
         margin: 60px 0;
         width: 100%;
         height: 500px;
-        box-shadow: 0px 0px 15px 2px #eeeeee;
+        box-shadow: var(--box-shadow);
         iframe {
             width: 100%;
             height: 100%;
             -o-object-fit: center;
-               object-fit: center;
+            object-fit: center;
             border: 1px solid rgba(0, 0, 0, 0.2);
         }
 
@@ -34,19 +34,19 @@
                 height: 50px;
                 margin-bottom: 30px;
                 font-style: italic;
-                color: #767676;
-                padding: 5px;
+                color: var(--text-color);
+                padding: 5px 20px;
                 border: 1px solid rgba(0, 0, 0, 0.2);
-                box-shadow: 0px 0px 5px 0.5px #ebebeb;
-                box-shadow: 0px 0px 15px 2px #eeeeee;
+                background: var(--bg-color);
+                box-shadow: var(--box-shadow);
             }
 
             textarea {
-                color: #767676;
+                padding: 20px;
                 height: 120px;
                 resize: none;
-                background-color: transparent;
-                box-shadow: 0px 0px 15px 2px #eeeeee;
+                background: var(--bg-color);
+                box-shadow: var(--box-shadow);
             }
         }
     }
