--- a/assets/css/_description-modal.scss
+++ b/assets/css/_description-modal.scss
@@ -7,7 +7,7 @@
     height: 100vh;
     z-index: 15;
     display: block;
-    background-color: rgba(76, 76, 76, 0.6);
+    background-color: var(--description-modal-bg);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,7 +21,7 @@
         position: relative;
         width: 100%;
         height: 100%;
-        background-color: #fff;
+        background-color: var(--bg-color);
         padding: 100px;
         overflow-y: auto;
         overflow-x: hidden;
@@ -38,6 +38,7 @@
                 display: flex;
                 flex-direction: column;
                 &__title {
+                    color: var(--heading-color);
                     font-size: 40px;
                     font-weight: 800;
                     text-transform: capitalize;
@@ -55,6 +56,7 @@
 
                 &__info {
                     .info-name {
+                        color: var(--heading-color);
                         font-size: 20px;
                         margin-bottom: 10px;
 
@@ -77,11 +79,11 @@
                         .tag {
                             display: inline-block;
                             padding: 10px 15px;
-                            color: #fff;
-                            background-color: #000;
+                            color: var(--bg-color);
+                            background-color: var(--heading-color);
                             border-radius: 30px;
                             font-size: 14px;
-                            font-weight: 300;
+                            font-weight: 400;
                             margin-right: 20px;
                             margin-bottom: 20px;
 
@@ -105,6 +107,7 @@
         }
         &-certificates {
             .certificates-title {
+                color: var(--heading-color);
                 font-size: 40px;
                 font-weight: 800;
                 text-transform: capitalize;
@@ -123,7 +126,7 @@
                 grid-gap: 50px;
                 img {
                     width: 100%;
-                    box-shadow: 0px 0px 15px 2px #eeeeee;
+                    box-shadow: var(--box-shadow);
                 }
 
                 @media (max-width: 768px) {
@@ -155,9 +158,13 @@
         font-size: 50px;
         cursor: pointer;
         transition: all 0.1s ease-in-out;
-        color: #767676;
+        color: var(--text-color);
         z-index: 2;
-        background-color: #fff;
+        background-color: var(--bg-color);
+
+        &:hover {
+            color: var(--heading-color);
+        }
 
         @media (max-width: 476px) {
             width: 30px;
@@ -165,10 +172,6 @@
             font-size: 30px;
             margin-top: 8px;
             margin-right: 8px;
-        }
-
-        &:hover {
-            color: #000;
         }
     }
 
