--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -7,42 +7,6 @@
     height: 100%;
     position: relative;
 
-    .music-player {
-        display: flex;
-        justify-content: center;
-        background: transparent;
-        align-items: center;
-        width: 125px;
-        height: 60px;
-        bottom: 60px;
-        right: 60px;
-        position: fixed;
-        cursor: pointer;
-        z-index: 10;
-        transition: all 0.25s ease-in-out;
-        #canvas {
-            z-index: 2;
-            display: inline-block;
-            width: 100%;
-            height: 100%;
-        }
-        @media (max-width: 992px) {
-            margin: 20px 0;
-            width: 150px;
-            position: initial;
-            bottom: initial;
-            right: initial;
-        }
-        &.pause {
-            background: url("https://img.icons8.com/small/96/000000/soundcloud.png")
-                center no-repeat;
-            background-size: contain;
-        }
-        @media (max-width: 768px) {
-            display: none;
-        }
-    }
-
     &__content {
         display: flex;
         flex-direction: row;
@@ -115,6 +79,7 @@
             margin-left: 80px;
 
             &__name {
+                color: var(--heading-color);
                 font-size: 55px;
                 font-weight: 800;
 
@@ -148,7 +113,7 @@
                         margin-right: 20px;
                         span {
                             font-size: 20px;
-                            color: #000;
+                            color: var(--heading-color);
                             transition: all 0.1s ease-in-out;
                         }
                         &:hover {
