--- a/assets/css/_mobile-menu.scss
+++ b/assets/css/_mobile-menu.scss
@@ -5,11 +5,11 @@
     left: 0;
     width: 100%;
     height: 60px;
-    background-color: #fff;
+    background-color: var(--bg-color);
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: -1px 0px 10px 1px #e6e6e6;
+    box-shadow: var(--mobile-menu-box-shadow);
     padding: 20px 40px;
 
     &__inner {
@@ -22,7 +22,7 @@
         &-logo {
             font-weight: 900;
             font-size: 22px;
-            color: #000;
+            color: var(--heading-color);
 
             @media (max-width: 476px) {
                 font-size: 16px;
@@ -34,23 +34,36 @@
                 display: flex;
                 flex-direction: row;
                 align-items: center;
+
+                .button-darkmode {
+                    cursor: pointer;
+                    span {
+                        font-size: 16px;
+                    }
+                }
                 &__item {
                     margin-left: 20px;
 
-                    a {
-                        color: #767676;
+                    .item-link {
+                        span {
+                            color: var(--text-color);
+                        }
                         font-size: 15px;
                         transition: all 0.1s ease-in-out;
                     }
 
                     &.active {
                         .item-link {
-                            color: #000;
+                            span {
+                                color: var(--heading-color);
+                            }
                         }
                     }
                     &:hover {
                         .item-link {
-                            color: #000;
+                            span {
+                                color: var(--heading-color);
+                            }
                         }
                     }
 
