--- a/assets/css/_portfolio.scss
+++ b/assets/css/_portfolio.scss
@@ -17,7 +17,7 @@
                     margin-left: 25px;
 
                     a {
-                        color: #767676;
+                        color: var(--text-color);
                         text-transform: capitalize;
                         font-weight: 500;
                         transition: all 0.25s ease-in-out;
@@ -31,14 +31,14 @@
 
                     &.active {
                         a {
-                            color: #000;
+                            color: var(--heading-color);
                             font-weight: 600;
                         }
                     }
                     &:hover {
                         a {
                             letter-spacing: 3px;
-                            color: #000;
+                            color: var(--heading-color);
                             font-weight: 600;
                         }
                     }
@@ -60,7 +60,7 @@
         &-list {
             display: flex;
             display: grid;
-            grid-template-columns: auto auto;
+            grid-template-columns: 50% 50%;
             grid-gap: 50px;
 
             li {
@@ -70,8 +70,8 @@
                     overflow: hidden;
                     cursor: pointer;
                     border-radius: 10px;
-                    box-shadow: 0px 0px 15px 2px #eeeeee;
-                    background-color: #fff;
+                    box-shadow: var(--portfolio-item-box-shadow);
+                    background-color: var(--bg-color);
                     overflow: hidden;
                     position: relative;
 
@@ -220,7 +220,7 @@
             }
 
             @media (max-width: 992px) {
-                grid-template-columns: auto;
+                grid-template-columns: 100%;
             }
         }
     }
