--- a/assets/css/_description-modal.scss
+++ b/assets/css/_description-modal.scss
@@ -121,15 +121,22 @@
             }
             .certificates {
                 display: grid;
-                grid-template-columns: auto auto;
+                grid-template-columns: auto auto auto;
                 justify-content: space-between;
-                grid-gap: 50px;
+                grid-gap: 40px;
                 img {
                     width: 100%;
+                    height: 100%;
                     box-shadow: var(--box-shadow);
                 }
 
+                @media (max-width: 1300px) {
+                    grid-template-columns: auto auto;
+                    grid-gap: 30px;
+                }
+
                 @media (max-width: 768px) {
+                    grid-gap: 20px;
                     grid-template-columns: auto;
                 }
             }
