--- a/assets/css/_description-modal.scss
+++ b/assets/css/_description-modal.scss
@@ -59,6 +59,7 @@
                         color: var(--heading-color);
                         font-size: 20px;
                         margin-bottom: 10px;
+                        text-transform: capitalize;
 
                         @media (max-width: 576px) {
                             font-size: 18px;
